<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/successConstraintLayout"
    android:layout_width="300dp"
    android:background="@drawable/custom_bkg"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/layoutDialog"
        android:background="@drawable/custom_bkg"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectText"
            android:text="@string/language"
            android:textColor="@color/language_grey_color"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/layoutDialog"/>

        <ScrollView
            android:id="@+id/languageScrollView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/selectText">
            <RadioGroup
                android:id="@+id/radioGroupLanguages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/radioUkrainian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ukrainian_lang" />
                <RadioButton
                    android:id="@+id/radioEnglish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english_lang" />
                <RadioButton
                    android:id="@+id/radioFrench"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/french_lang" />
                <RadioButton
                    android:id="@+id/radioGerman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/german_lang" />
                <RadioButton
                    android:id="@+id/radioKorean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/korean_lang" />
                <RadioButton
                    android:id="@+id/radioJapanese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/japanese_lang" />
            </RadioGroup>
        </ScrollView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selectButton"
            android:text="@string/select"
            android:textSize="14sp"
            app:cornerRadius="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/language_blue_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/languageScrollView"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:id="@+id/languageImage"
        android:src="@drawable/language"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutDialog"
        app:layout_constraintBottom_toTopOf="@id/layoutDialog"
        android:contentDescription="@string/languageimage" />
</androidx.constraintlayout.widget.ConstraintLayout>