<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DayFragment">

    <ImageView
        android:id="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/design_one_2" />

    <ImageView
        android:id="@+id/imageView2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="60dp"
        android:layout_height="130dp"
        android:scaleType="fitXY"
        android:src="@drawable/ellipse_one" />

    <ImageView
        android:id="@+id/imageView3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="210dp"
        android:layout_marginStart="12dp"
        android:scaleType="fitXY"
        android:src="@drawable/design_two" />

    <HorizontalScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/sortRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:scrollbars="none" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnAllSort"
                android:textColor="?attr/buttonText"
                android:layout_width="90dp"
                android:layout_height="55dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="7dp"
                android:gravity="center"
                android:text="@string/All" />
            <Button
                android:id="@+id/btnUrgentImportant"
                android:textColor="?attr/buttonText"
                android:layout_width="120dp"
                android:layout_height="55dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="7dp"
                android:gravity="center"
                android:text="@string/urgent_and_important" />
            <Button
                android:id="@+id/btnNotUrgentImportant"
                android:textColor="?attr/buttonText"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="7dp"
                android:gravity="center"
                android:text="@string/not_urgent_important" />
            <Button
                android:id="@+id/btnUrgentNotImportant"
                android:textColor="?attr/buttonText"
                android:layout_width="140dp"
                android:layout_height="55dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="7dp"
                android:gravity="center"
                android:text="@string/urgent_not_important" />
            <Button
                android:id="@+id/btnNotUrgentNotImportant"
                android:textColor="?attr/buttonText"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="7dp"
                android:gravity="center"
                android:text="@string/not_urgent_not_important" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainRecyclerView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addTaskBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/add_task_button"
        android:src="@drawable/ic_baseline_add_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >
    </com.google.android.material.floatingactionbutton.FloatingActionButton>
</androidx.constraintlayout.widget.ConstraintLayout>