<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/successConstraintLayout"
    android:layout_width="300dp"
    android:background="?attr/verifyPasswordBackground"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/layoutDialog"
        android:background="?attr/verifyPasswordBackground"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectText"
            android:text="@string/verify_it_s_you"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/layoutDialog"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/passwordLayout"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/selectText"
            app:boxStrokeWidth="0dp"
            android:layout_marginTop="20dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:drawablePadding="8dp"
                android:textSize="16sp"
                android:drawableStart="?attr/lock"
                android:background="?attr/lavender_border"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selectButton"
            android:text="@string/verify_and_continue"
            android:textColor="?attr/verifyPasswordText"
            android:textSize="14sp"
            app:cornerRadius="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="?attr/languageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:id="@+id/verifyPassImage"
        android:src="@drawable/password_security_1"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutDialog"
        app:layout_constraintBottom_toTopOf="@id/layoutDialog"
        android:contentDescription="@string/verifyitsyou" />
</androidx.constraintlayout.widget.ConstraintLayout>